--- a/.github/workflows/pdb2seq.yml
+++ b/.github/workflows/pdb2seq.yml
@@ -16,9 +16,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+
+    # - name: install cross
+    #   run: cargo install cross
+      
     - name: Build
       run: |
         cd pdb2seq
-        cargo build --release
+        cargo build --target=x86_64-pc-windows-gnu --release
 
     
