--- a/.github/workflows/pdb2seq.yml
+++ b/.github/workflows/pdb2seq.yml
@@ -17,8 +17,8 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    # - name: install cross
-    #   run: cargo install cross
+    - name: install compiler
+      run: rustup target add x86_64-pc-windows-gnu
       
     - name: Build
       run: |
