--- a/.github/workflows/pdb2seq.yml
+++ b/.github/workflows/pdb2seq.yml
@@ -19,7 +19,7 @@ jobs:
 
     - name: install compiler
       run: |
-        apt install mingw-w64
+        sudo apt install mingw-w64
         rustup target add x86_64-pc-windows-gnu
       
     - name: Build
