--- a/.github/workflows/pdb2seq.yml
+++ b/.github/workflows/pdb2seq.yml
@@ -26,6 +26,8 @@ jobs:
       run: |
         cd pdb2seq
         cargo build --target=x86_64-pc-windows-gnu --release
+        ls
+        ls release
 
     - name: Upload Windows zip
       uses: actions/upload-artifact@v3    
