--- a/.github/workflows/pdb2seq.yml
+++ b/.github/workflows/pdb2seq.yml
@@ -27,13 +27,13 @@ jobs:
         cd pdb2seq
         cargo build --target=x86_64-pc-windows-gnu --release
         ls
-        ls release
+        ls target
 
     - name: Upload Windows zip
       uses: actions/upload-artifact@v3    
       with:
         name: pdb2seq for windows
-        path: ./pdb2seq/release/pdb2seq.exe
+        path: ./pdb2seq/target/release/pdb2seq.exe
 
     - name: Build for Linux
       run: |
@@ -44,7 +44,7 @@ jobs:
       uses: actions/upload-artifact@v3    
       with:
         name: pdb2seq for Linux
-        path: ./pdb2seq/release/pdb2seq
+        path: ./pdb2seq/target/release/pdb2seq
       
 
     
